# OntologyPailleur

./: FCA_From_Scratch__SymbolicKD_at_IDMC_2026.ipynb  README.md  fca_from_scratch__symbolickd_at_idmc_2026.ipynb  formal_ontology.ttl  pyproject.toml
ontopailleur/: formal_ontology_constructor..py  formal_ontology_constructor.py  graphrag.py
