# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontopailleur"
version = "0.0.1"
description = "Set of tools to construct ontologies with FCA and Patern Structures"
readme = "README.md"
authors = [{ name = "Egor Dudyrev" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["python", "fca", "ontology"]
dependencies = [
    'caspailleur>=0.2.1', 'bitarray>=3', 'paspailleur', 'rdflib', 'tqdm'
]
requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/smartFCA/OntologyPailleur"


[tool.setuptools]
py-modules = ["ontopailleur"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default
